# sql-beautify

./: .gitignore  README.md  README.zh.md  main.py  pyproject.toml
