[project]
name = "sql-beautify"
version = "1.0.0"
description = "A Streamlit application for SQL alignment and beautification."
requires-python = ">=3.9, !=3.9.7" # Updated to explicitly exclude the conflicting Python version
dependencies = [
    "streamlit>=1.30.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["venv", ".venv"]

# Added to fix "No file/folder found for package" error for single-script projects.
# This tells Poetry to not try to install the project itself as a package.
[tool.poetry]
package-mode = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
